######################################################
#Log any changes you make here, along with your name!#
######################################################

[Mushy] changed readme.md to include this file

[Mushy] created this file

[Mushy] added a minor startup change

[AAAA] added /sudo <name> <Command> [args] - runs a command as another player

[AAAA] added /kickall - kicks all players on server if run from console it will kick everybody
       if run from player it will kick everybody but the player who ran it.
       
[AAAA] added /kill <name> - kills the person you wan't. You can kill yourself. It teleports you into a block which
      causes them to die.

[Mushy] improved readme.md

[Mushy] Added a download folder, and put a temp file in it

[Mushy] Added a "Commands" and "EventHandlers" folder. Please can you transfer existing classes to the relevant folder!

[Mushy] Added a placeholder for /tpto <playername> /tphere <playername> and /freeze <playername>

[Mushy] Changed some things on plugin startup

[Mushy] Changed stuff so that it mentions abiram!

[Mushy] Added nice, sweet message when the server shuts down! :)

[Mushy] Added comand /tpto <playername> - This is designed to make teleporting easier. This will teleport the player to <playername>
        requires: mbes.cmds.tpto

[Mushy] Re-orginised some stuff to make sure that the packages and imports work correctly!